<resources>
    <string name="app_name">CarBrief</string>
    <string name="onboarding_title_1">Explore every car you ride</string>
    <string name="onboarding_title_2">Learn how to use the new vehicle controls</string>
    <string name="onboarding_title_3">Use AR mode to fully interact</string>
    <string name="onboarding_description_1">Inspect the interior of your own or rented car thanks to an interactive guide using your smartphone camera</string>
    <string name="onboarding_description_2">"Using the hints in the app, learn how to use any of the car's controllers correctly"</string>
    <string name="onboarding_description_3">Activate the augmented reality mode to fully immerse yourself in the interior of a new car</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="get_started">GET STARTED</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="explore_cars">EXPLORE CARS</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="repeat_password">repeat password</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">confirm password</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tittle_settings">settings</string>
    <string name="tittle_profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">log out</string>
    <string name="settings">Settings</string>
    <string name="get_instruction">GET INSTRUCTION</string>
    <string name="favorite">favorite</string>
    <string name="title_activity_instruction">InstructionActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="instructions">Instructions</string>
    <string name="title_activity_instruction_entry">InstructionEntry</string>

    <string name="climate_control_topic">Climate control system</string>
    <string name="music_system_topic">Music system</string>
    <string name="air_blower_topic">Air blower</string>
    <string name="display_topic">Main display, multimedia system</string>
    <string name="light_controller_topic">Light switch controller</string>
    <string name="steering_buttons_topic">Steering wheel buttons</string>
    <string name="gear_lever_topic">Gear lever</string>
    <string name="drive_switching_topic">I Drive controller</string>
    <string name="preference_file_key">Preference file key</string>
    <string name="preference_favorites_set">Preference favorites list</string>
    <string name="preference_model">Preference model</string>
    <string name="preference_use_gpu">Use gpu</string>
    <string name="favorite_manuals">Favorite manuals</string>
    <string name="no_favorites">No Favorites</string>
    <string name="no_favorites_descr">You can add an item to your\nfavorites list by clicking\nthe camera button below</string>
    <string name="light_model">Light model</string>
    <string name="model">Model</string>
    <string name="average_model">Average model</string>
    <string name="heavy_model">Heavy model</string>
    <string name="model_description">ML backend used for object detection</string>
    <string name="light_model_description">Provides higher frame rate and lower accuracy</string>
    <string name="profile">Profile</string>
    <string name="profile_image_uri">profile image uri</string>
    <string name="save_changes">save changes</string>
</resources>