<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/tittle_profile" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/tittle_settings" />

</menu>