<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".StartScreenActivity">

    <ImageView
        android:id="@+id/startScreenImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_screen_white" />

    <TextView
        android:id="@+id/startScreenTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/explore_cars"
        android:fontFamily="@font/roboto_bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startScreenImage" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:backgroundTint="@color/primary_800"
        app:cornerRadius="10dp"
        android:padding="10dp"
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/log_in"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:cornerRadius="10dp"
        app:strokeColor="@color/primary_800"
        app:strokeWidth="2dp"
        android:padding="10dp"
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/register"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"

        android:textColor="@color/primary_800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>