<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:title="Log in"
        app:titleTextColor="@color/black"
        app:navigationIcon="@drawable/baseline_arrow_back_24"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />


    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLogin"
        app:srcCompat="@drawable/splash_screen_white" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/explore_cars"
        android:fontFamily="@font/roboto_bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogin" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:backgroundTint="@color/primary_800"
        app:cornerRadius="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/log_in"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnForgetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnForgetPassword"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/forgot_password"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:textColor="@color/primary_800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:flow_horizontalAlign="center"
        android:textColorHint="@color/base_500"
        app:hintTextColor="@color/primary_800"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_field"
            android:inputType="text"
            android:drawableStart="@drawable/baseline_person_24"
            android:padding="@dimen/activity_horizontal_margin"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_italic"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textColorHint="@color/base_500"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:textColorHint="@color/base_500"
        app:hintTextColor="@color/primary_800"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="@drawable/round_corner_toggle"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_24"
            android:padding="@dimen/activity_horizontal_margin"
            android:paddingEnd="76dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_italic"
            android:textSize="18sp"
            android:textColorHint="@color/base_500"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>