<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegistrationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:title="Register"
        app:titleTextColor="@color/black"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarReg"
        app:srcCompat="@drawable/splash_screen_white" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/explore_cars"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRegister" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameRegInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:flow_horizontalAlign="center"
        android:textColorHint="@color/base_500"
        app:hintTextColor="@color/primary_800"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:layout_constraintTop_toBottomOf="@+id/textViewRegister"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsername"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_field"
            android:drawableStart="@drawable/baseline_person_24"
            android:fontFamily="@font/roboto_italic"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="@dimen/activity_horizontal_margin"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/base_500"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRegInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:flow_horizontalAlign="center"
        android:textColorHint="@color/base_500"
        app:hintTextColor="@color/primary_800"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:layout_constraintTop_toBottomOf="@+id/usernameRegInputLayout"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_field"
            android:drawableStart="@drawable/baseline_email_24"
            android:fontFamily="@font/roboto_italic"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="@dimen/activity_horizontal_margin"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/base_500"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordRegInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:textColorHint="@color/base_500"
        app:hintTextColor="@color/primary_800"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:layout_constraintTop_toBottomOf="@+id/emailRegInputLayout"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_toggle"
            android:drawableStart="@drawable/baseline_lock_24"
            android:fontFamily="@font/roboto_italic"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/activity_horizontal_margin"
            android:paddingEnd="76dp"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/base_500"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPasswordRegInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:hintEnabled="false"
        android:textColorHint="@color/base_500"
        app:hintTextColor="@color/primary_800"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:layout_constraintTop_toBottomOf="@+id/passwordRegInputLayout"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:background="@drawable/round_corner_toggle"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_24"
            android:padding="@dimen/activity_horizontal_margin"
            android:paddingEnd="76dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_italic"
            android:textSize="18sp"
            android:textColorHint="@color/base_500"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:backgroundTint="@color/primary_800"
        app:cornerRadius="10dp"
        android:padding="10dp"
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:text="@string/register"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:padding="10dp"
        android:id="@+id/btnHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/already_have_an_account"
        android:fontFamily="@font/roboto_medium"
        android:textSize="14sp"
        android:textColor="@color/primary_800"
        android:background="@drawable/empty_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>